# bt_as_reward

./: .gitignore  Dockerfile  README.md  pyproject.toml
action_masks/: doorkey_action_masks_expert.json  doorkey_action_masks_llm.json  dronesupplier_action_masks_expert.json  dronesupplier_action_masks_llm.json  lockedroom_action_masks_expert.json  lockedroom_action_masks_llm.json  pickandplace2_action_masks_expert.json  pickandplace2_action_masks_llm.json  pickandplace_action_masks_expert.json
bash_scripts/: plot_tensorboard.sh  plot_tensorboard_doorkey_verify.sh  verify_doorkey_subtask.sh
bash_scripts/doorkey/: create_action_masks.sh  create_trajs.sh  run_behaverify_exps.sh  run_exps.sh  train.sh  verify_action_masks.sh  verify_bt.sh  verify_bt_failure.sh  verify_object.sh  verify_subtask.sh  z3_run_exps.sh  z3_run_llm_minigrid_train.sh  z3_run_llm_pipeline.sh  z3_verify_composition.sh  z3_verify_object.sh  z3_verify_subtask.sh
bash_scripts/dronesupplier/: create_action_masks.sh  create_trajs.sh  run_exps.sh  train.sh  verify_action_masks.sh  verify_bt.sh  verify_object.sh  verify_subtask.sh  z3_run_exps.sh  z3_run_llm_pipeline.sh  z3_train.sh  z3_verify_composition.sh  z3_verify_object.sh  z3_verify_subtask.sh
bash_scripts/lockedroom/: create_action_masks.sh  create_trajs.sh  failure_z3_verify_composition.sh  run_exps.sh  train.sh  verify_action_masks.sh  verify_bt.sh  verify_object.sh  verify_subtask.sh  z3_run_exps.sh  z3_run_llm_pipeline.sh  z3_train.sh  z3_verify_composition.sh  z3_verify_object.sh  z3_verify_subtask.sh
bash_scripts/pickandplace/: create_action_masks.sh  create_trajs.sh  (+12 more)
bt_as_reward/: constants.py  utils.py
data/: drone_obstacles.npy
dependent_subtasks/: doorkey_dependent_subtasks.json
drone/: test.sh  test_policy.py
templates/: minigrid.jinja  mujoco.jinja  z3_minigrid.jinja  z3_mujoco.jinja
tests/: test_rewards.py  test_z3_minigrid.py  test_z3_mujoco.py
(+74 files in other folders)
