[project]
name = "bt-as-reward"
dynamic = ["version"]  # Let hatchling handle version
description = "Behavior Trees as Rewards in Reinforcement Learning"
readme = "README.md"
authors = [
    { name = "anonymous", email = "anonymous@anonymous.com" }
]
requires-python = ">=3.11"
dependencies = [
    "airsim>=1.8.1",
    "dotenv>=0.9.9",
    "gymnasium-robotics>=1.4.1",
    "gymnasium[mujoco]>=1.2.0",
    "imageio[ffmpeg]>=2.37.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "minigrid>=3.0.0",
    "py-trees>=2.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "sb3-contrib>=2.7.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "z3-solver>=4.15.4.0",
]

[tool.uv.extra-build-dependencies]
airsim = ["numpy", "msgpack-rpc-python"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

# Hatchling configuration
[tool.hatch.version]
path = "bt_as_reward/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["bt_as_reward"]
